# Donald-Trump-Rally-Speeches-NLP

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  404.html  Dockerfile  Masked Language Modeling.ipynb  README.md  Sentiment Analysis.ipynb  docker-compose.yml  index.html  mkdocs.yml  most_used_words.ipynb  pyproject.toml  render.yaml  sitemap.xml
.github/workflows/: build-deploy-azure.yml  build-deploy-render.yml  build-push-docker.yml  ci.yml  deploy-azure.yml  deploy-docs.yml  deploy-render.yml  main_trump-nlp-ai-api.yml  main_trump-speeches-nlp-chatbot.yml  security.yml
.ipynb_checkpoints/: Masked Language Modeling-checkpoint.ipynb  Sentiment Analysis-checkpoint.ipynb  Untitled-checkpoint.ipynb  most_used_words-checkpoint.ipynb
CHANGELOG/: index.html
configs/: development.yaml  production.yaml  staging.yaml
data/chromadb/4552b91b-f0c2-486a-a739-0dc0ac15f2b6/: index_metadata.pickle
data/chromadb/7fb3f830-0e44-472c-b48c-20903db87bc9/: index_metadata.pickle
docs/: ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  DEPLOYMENT.md  QUICKSTART.md  README.md  TESTING.md  index.md
docs/guides/: deployment.md  quickstart.md
docs/howto/: documentation.md  entity-analytics.md  logging.md  testing.md  topic-extraction.md
docs/reference/: architecture.md  configuration.md  rag-features.md
guides/deployment/: index.html
guides/quickstart/: index.html
howto/documentation/: index.html
howto/entity-analytics/: index.html
howto/logging/: index.html
howto/testing/: index.html
howto/topic-extraction/: index.html
notebooks/: 1. Word Frequency & Topics Analysis.ipynb  2. Sentiment Analysis.ipynb  Sentiment Analysis.ipynb  Word Clouds.ipynb
notebooks/kaggle_compatible/: README.md  trump-rally-sentiment-analysis.ipynb  trump-rally-speeches-nlp-analysis.ipynb
reference/architecture/: index.html
reference/configuration/: index.html
reference/rag-features/: index.html
scripts/: migrate_rag_embeddings.py  run.py
search/: search_index.json
src/: __init__.py  api.py  config.py  llm_service.py  main.py  models.py  preprocessing.py  rag_service.py  utils.py
src/api/: __init__.py  dependencies.py  routes_chatbot.py  routes_health.py  routes_nlp.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  logging_config.py  security.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  llm_service.py  nlp_service.py  rag_service.py  sentiment_service.py  topic_service.py
src/services/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
src/services/rag/: __init__.py  confidence.py  document_loader.py  entity_analyzer.py  models.py  search_engine.py
src/templates/: index.html
src/utils/: __init__.py  embeddings.py  formatters.py  io_helpers.py
static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_confidence.py  test_document_loader.py  test_entity_analyzer.py  test_preprocessing.py  test_rag_improvements.py  test_rag_integration.py  test_rag_service.py  test_search_engine.py  test_topic_service.py  test_utils.py
