[project]
name = "dt-rally-speeches-nlp"
version = "0.1.0"
description = "NLP exercise on a dataset of rally speeches from Donald Trump's first presidential campaign."
authors = [
    {name = "Kristiyan Bonev"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "jupyterlab (>=4.4.10,<5.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "widgetsnbextension (>=4.0.14,<5.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "huggingface-hub (>=0.36.0,<0.37.0)",
    "tf-keras (>=2.20.1,<3.0.0)",
    "certifi (>=2025.10.5,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
